# git-hydra

./: .gitignore  LICENSE  README.md  electron.vite.config.ts  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.cjs  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/workflows/: release.yml
e2e/: app.spec.ts  branch-checkout-scroll.spec.ts  scroll.spec.ts
resources/: icon.icns
scripts/: copy-resources.js
src/: main.ts  preload.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  git_service.rs  lib.rs  main.rs  watcher.rs
src/main/: configService.ts  gitService.ts
src/renderer/: App.tsx  index.css  main.tsx  types.ts  window.d.ts
src/renderer/api/: tauri.ts
src/renderer/components/: BranchList.tsx  CommitDetail.tsx  CommitGraph.tsx  RepoView.tsx  StatusPanel.tsx  TabBar.tsx
src/types/: git.ts
